# yew-game-of-life

./: Cargo.toml  README.md  index.html  index.scss
src/: life.rs  main.rs
