[package]
name = "yew-game-of-life"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
gloo-net = { version="0.2", features = ["json"]}
gloo = "0.8.0"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
